Fix overflows containers and margins

--- a/src/app/components/folder/folder.component.css
+++ b/src/app/components/folder/folder.component.css
@@ -3,7 +3,7 @@
 }
 
 .container-scroll {
-    height: 450px;
+    height: 525px;
     overflow-y: scroll;
 }
 .container-scroll::-webkit-scrollbar-track {
